# assimp-to-json

./: .gitignore  CMakeLists.txt  main.cpp
dependencies/json/: json.hpp
